feat: add some basic cell type support